Added services api call and button component

--- a/components/contact-icons/contact-icons.module.css
+++ b/components/contact-icons/contact-icons.module.css
@@ -5,3 +5,9 @@
 .contact-icons .facebook{
     color: 	#4267B2;
 }
+
+.contact-icons__background *{
+    background-color: white;
+    padding: 5px;
+    border-radius: 10px;
+}
