Added service card components and inserted to index page

--- a/components/button/button.module.css
+++ b/components/button/button.module.css
@@ -1,5 +1,5 @@
 .button-container{
-    @apply w-full flex flex-row items-center cursor-pointer;
+    @apply w-full mb-12 flex flex-row items-center cursor-pointer;
 }
 
 .button{
