--- a/components/profile/profile.module.css
+++ b/components/profile/profile.module.css
@@ -2,8 +2,12 @@
     @apply absolute -bottom-8 w-full flex justify-center;
 }
 
+.image-container{
+    @apply w-60 h-60 relative m-auto;
+}
+
 .image{
-    @apply rounded-full w-60 h-60 m-auto;
+    @apply rounded-full ;
 }
 
 .profile-container{
