--- a/components/profile/profile.module.css
+++ b/components/profile/profile.module.css
@@ -7,9 +7,17 @@
 }
 
 .image{
-    @apply rounded-full ;
+    @apply rounded-full;
+}
+
+.image-skeleton{
+    @apply rounded-full bg-gray-300 w-60 h-60;
 }
 
 .profile-container{
     @apply h-60 relative mb-16;
+}
+
+.profile-container-skeleton{
+    @apply h-60 relative mb-16 animate-pulse;
 }
