Finished footer for mob and desktop

--- a/components/contact-icons/contact-icons.module.css
+++ b/components/contact-icons/contact-icons.module.css
@@ -11,3 +11,8 @@
     padding: 5px;
     border-radius: 10px;
 }
+
+.contact-icons__col{
+    @apply flex flex-col justify-between;
+    height: 80px;
+}
