Started work on question collapser

--- a/components/service-content/service-content.module.css
+++ b/components/service-content/service-content.module.css
@@ -12,7 +12,7 @@
 }
 
 .service-intro-content{
-    @apply flex mb-8 align-middle items-center;
+    @apply flex flex-col mb-8 align-middle items-start justify-items-center content-center;
 }
 
 .service-main-content-container{
