--- a/components/question-collapser/question-collapser.module.css
+++ b/components/question-collapser/question-collapser.module.css
@@ -1,5 +1,5 @@
 .question{
-    @apply border-t border-b pt-6 mx-4 mb-8 border-white;
+    @apply border-t border-b p-4 mx-4 mb-16 border-white;
 }
 
 .question h3{
@@ -7,9 +7,5 @@
 }
 
 .answer{
-    @apply transition-all;
-}
-
-.hidden{
-    @apply transform scale-y-0 overflow-hidden transition-all ;
+    @apply mb-16;
 }
